kubernetes/feedback-by-page-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: feedback-by-page
  name: feedback-by-page
spec:
  replicas: 1
  selector:
    matchLabels:
      app: feedback-by-page
  strategy: {}
  template:
    metadata:
      labels:
        app: feedback-by-page
    spec:
      containers:
      - image: tbsacr.azurecr.io/feedback-by-page:latest
        imagePullPolicy: Always
        name: feedback-by-page
        resources: 
          limits:
            cpu: 2000m
            memory: 2048Mi
          requests:
            cpu: 250m
            memory: 256Mi
