kubernetes/suggestion-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: suggestion
  name: suggestion
spec:
  replicas: 1
  selector:
    matchLabels:
      app: suggestion
  strategy: {}
  template:
    metadata:
      labels:
        app: suggestion
    spec:
      containers:
      - image: tbsacr.azurecr.io/suggestion:latest
        imagePullPolicy: Always
        name: suggestion
        resources: 
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 250m
            memory: 256Mi
