kubernetes/feedback-by-page-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: feedback-by-page
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: feedback-by-page
  sessionAffinity: None
  type: ClusterIP
