kubernetes/suggestion-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: suggestion
spec:
  ports:
    - port: 5000
      protocol: TCP
      targetPort: 5000
  selector:
    app: suggestion
  sessionAffinity: None
  type: ClusterIP
