kubernetes/feedback-by-page-ingress.yaml
apiVersion: extensions/v1
kind: Ingress
metadata:
  name: feedback-by-page-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - feedback-by-page.tbs.alpha.canada.ca
      secretName: feedback-by-page-tls-secret-prod
  rules:
    - host: feedback-by-page.tbs.alpha.canada.ca
      http:
        paths:
          - backend:
              service:
                name: feedback-by-page
                port:
                  number: 5000
            path: /
