kubernetes/feedback_by_page-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: feedback_by_page-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - feedback_by_page.tbs.alpha.canada.ca
    secretName: feedback_by_page-tls-secret-prod
  rules:
  - host: feedback_by_page.tbs.alpha.canada.ca
    http:
      paths:
      - backend:
          serviceName: feedback_by_page
          servicePort: 5000
        path: /
