kubernetes/suggestion-ingress.yaml
apiVersion: extensions/v1
kind: Ingress
metadata:
  name: suggestion-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - suggestion.tbs.alpha.canada.ca
    secretName: suggestion-tls-secret-prod
  rules:
  - host: suggestion.tbs.alpha.canada.ca
    http:
      paths:
      - backend:
          service:
            name: suggestion
            port:
              number: 5000
        path: /
